# neuroscreen-workplace

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyprohet.toml  pyproject.toml  requirements.txt  style.css
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy.yml  release.yml
assets/: app.js  index.html  style.css
autisme/: streamlit-autisme.py
autisme/.devcontainer/: devcontainer.json
business-case/: ROI_ubisoft_people_analytics.md
config/.streamlit/: config.toml
data/: metrics.json  sample_data.csv
deployment/: Dockerfile  docker-compose.yml
deployment/k8s/: deployment.yaml  ingress.yaml  service.yaml
deployment/scripts/: build.sh  deploy.sh
docs/: api_reference.md  deployment.md  index.md  mkdocs.yml  user_guide.md
models/: README.md  random_forest.pkl
neuroinsight_hub_streamlit/: .pre-commit-config.yaml  app.py  config.toml  mkdocs.yml  neuroinsight-hub-enhanced.py  requirements.txt
neuroinsight_hub_streamlit/.github/: pull_request_template.md
neuroinsight_hub_streamlit/assets/: style.css
neuroinsight_hub_streamlit/data/: README.md  metrics.json
neuroinsight_hub_streamlit/notebooks/: 01-data-exploration.ipynb
neuroinsight_hub_streamlit/tests/: conftest.py  testmodel.py
notebooks/: 01_data_exploration.ipynb  02_model_training.ipynb  03_validation.ipynb
src/: config.py  etl.py  model.py
src/api/: endpoints.py
tdah/: requirements.txt
tests/: conftest.py  test_api.py  test_etl.py  test_models.py  test_utils.py
(+6 files in other folders)
