[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroscreen-workplace"
version = "3.0.0"
description = "Plateforme RH pour la gestion de la neurodiversité en entreprise"
authors = [{name = "Rémi Chenouri", email = "chenouri.remi@proton.me"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.17.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "ruff>=0.1.0", "mypy>=1.0"]
